fixed css so long words in notes are wrapped

--- a/src/main/resources/htdocs/css/note.css
+++ b/src/main/resources/htdocs/css/note.css
@@ -30,6 +30,7 @@
 	border-radius: 4px;
 	font-size: 18px;
 	line-height: 1.2em;
+	word-wrap: break-word;
 }
 
 .note-edit {	
